--- a/.github/workflows/pr_test.yml
+++ b/.github/workflows/pr_test.yml
@@ -25,4 +25,4 @@ jobs:
         run: go vet ./...
 
       - name: go test
-        run: go test ./...
+        run: go test -v -shuffle=on -count=2 ./...
