--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,12 +26,6 @@ jobs:
         with:
           go-version: ${{ env.GOVER }}
 
-      - name: write .netrc
-        env:
-          PAT: ${{ secrets.PAT_PHILLIP }}
-        run: |
-          echo "machine github.com login phillipleblanc password $PAT" > ~/.netrc
-
       - name: go get github.com/spiceai/spiceai
         env:
           GONOSUMDB: github.com/spiceai/spiceai
@@ -44,4 +38,4 @@ jobs:
         run: go build ./...
 
       - name: go test
-        run: go test ./...
+        run: go test -v -shuffle=on -count=5 ./...
